examples/test/testpolicy17118.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17118
  namespace: namespace143
spec:
  podSelector:
    matchLabels:
      key34: value9
      key7: value38
      key37: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value0
          key47: value48
          key5: value42
      podSelector:
        matchLabels:
          key15: value47
          key33: value10
